// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`elements of the language case 2 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "MyStepFunction25667C23": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "MyStepFunctionRole487C681B",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"switchcase-invoke","States":{"switchcase-invoke":{"Next":"SwitchCase","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "switchcaselambda8EB37680",
                  "Arn",
                ],
              },
              "","Payload.$":"$.Payload"}},"SwitchCase":{"Type":"Choice","Choices":[{"Variable":"$.characteristic","StringEquals":"case1","Next":"case1"}],"Default":"case2"},"case2":{"Type":"Succeed"},"case1":{"Type":"Succeed"}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "MyStepFunctionRole487C681B",
            "Arn",
          ],
        },
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "MyStepFunctionRole487C681B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "MyStepFunctionRoleDefaultPolicy63A82B2E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "switchcaselambda8EB37680",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "switchcaselambda8EB37680",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "Roles": [
          {
            "Ref": "MyStepFunctionRole487C681B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "switchcaselambda8EB37680": {
      "DependsOn": [
        "switchcaselambdaServiceRole8DE05443",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "be30ef1de42d0cf33ebc1ca2e8bef80c79b8bc831da69a04dcd6258263173c0b.zip",
        },
        "Handler": "index.switchcase",
        "Role": {
          "Fn::GetAtt": [
            "switchcaselambdaServiceRole8DE05443",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "switchcaselambdaServiceRole8DE05443": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`elements of the language case 3 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "MyStepFunction25667C23": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "MyStepFunctionRole487C681B",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"switchcase-invoke","States":{"switchcase-invoke":{"Next":"switchcase-choice","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "switchcaselambda8EB37680",
                  "Arn",
                ],
              },
              "","Payload.$":"$.Payload"}},"switchcase-choice":{"Type":"Choice","Choices":[{"Variable":"$.characteristic","StringEquals":"case1","Next":"case1"},{"Variable":"$.characteristic","StringEquals":"case2","Next":"case2"}],"Default":"case3"},"case3":{"Type":"Succeed"},"case1":{"Type":"Succeed"},"case2":{"Type":"Succeed"}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "MyStepFunctionRole487C681B",
            "Arn",
          ],
        },
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "MyStepFunctionRole487C681B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "MyStepFunctionRoleDefaultPolicy63A82B2E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "switchcaselambda8EB37680",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "switchcaselambda8EB37680",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "Roles": [
          {
            "Ref": "MyStepFunctionRole487C681B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "switchcaselambda8EB37680": {
      "DependsOn": [
        "switchcaselambdaServiceRole8DE05443",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "be30ef1de42d0cf33ebc1ca2e8bef80c79b8bc831da69a04dcd6258263173c0b.zip",
        },
        "Handler": "index.switchcase",
        "Role": {
          "Fn::GetAtt": [
            "switchcaselambdaServiceRole8DE05443",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "switchcaselambdaServiceRole8DE05443": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`elements of the language if then else 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "MyStepFunction25667C23": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "MyStepFunctionRole487C681B",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"condition-invoke","States":{"condition-invoke":{"Next":"condition-choice","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "conditionlambda579CCE58",
                  "Arn",
                ],
              },
              "","Payload.$":"$.Payload"}},"condition-choice":{"Type":"Choice","Choices":[{"Variable":"$.condition","BooleanEquals":true,"Next":"true"}],"Default":"false"},"false":{"Type":"Succeed"},"true":{"Type":"Succeed"}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "MyStepFunctionRole487C681B",
            "Arn",
          ],
        },
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "MyStepFunctionRole487C681B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "MyStepFunctionRoleDefaultPolicy63A82B2E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "conditionlambda579CCE58",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "conditionlambda579CCE58",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "Roles": [
          {
            "Ref": "MyStepFunctionRole487C681B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "conditionlambda579CCE58": {
      "DependsOn": [
        "conditionlambdaServiceRole065AE09A",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "be30ef1de42d0cf33ebc1ca2e8bef80c79b8bc831da69a04dcd6258263173c0b.zip",
        },
        "Handler": "index.condition",
        "Role": {
          "Fn::GetAtt": [
            "conditionlambdaServiceRole065AE09A",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "conditionlambdaServiceRole065AE09A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`elements of the language loop 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "MyStepFunction25667C23": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "MyStepFunctionRole487C681B",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"loop-invoke","States":{"loop-invoke":{"Next":"loop-condition","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "looplambda7A025230",
                  "Arn",
                ],
              },
              "","Payload.$":"$.Payload"}},"loop-wait":{"Type":"Wait","Seconds":2,"Next":"loop-invoke"},"loop-condition":{"Type":"Choice","Choices":[{"Variable":"$.Payload.output","IsPresent":true,"Next":"loop-pass"}],"Default":"loop-wait"},"loop-pass":{"Type":"Pass","Result":{"Payload":{"value":{}}},"ResultPath":"$.Payload","InputPath":"$.Payload.output","Next":"case1"},"case1":{"Type":"Succeed"}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "MyStepFunctionRole487C681B",
            "Arn",
          ],
        },
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "MyStepFunctionRole487C681B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "MyStepFunctionRoleDefaultPolicy63A82B2E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "looplambda7A025230",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "looplambda7A025230",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "Roles": [
          {
            "Ref": "MyStepFunctionRole487C681B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "looplambda7A025230": {
      "DependsOn": [
        "looplambdaServiceRoleDBBFC2BC",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "be30ef1de42d0cf33ebc1ca2e8bef80c79b8bc831da69a04dcd6258263173c0b.zip",
        },
        "Handler": "index.loop",
        "Role": {
          "Fn::GetAtt": [
            "looplambdaServiceRoleDBBFC2BC",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "looplambdaServiceRoleDBBFC2BC": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`elements of the language simple function 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "MyStepFunction25667C23": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "MyStepFunctionRole487C681B",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"function-invoke","States":{"function-invoke":{"Next":"theend","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "functionlambda70BD8ECD",
                  "Arn",
                ],
              },
              "","Payload.$":"$.Payload"}},"theend":{"Type":"Succeed"}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "MyStepFunctionRole487C681B",
            "Arn",
          ],
        },
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "MyStepFunctionRole487C681B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "MyStepFunctionRoleDefaultPolicy63A82B2E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "functionlambda70BD8ECD",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "functionlambda70BD8ECD",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "MyStepFunctionRoleDefaultPolicy63A82B2E",
        "Roles": [
          {
            "Ref": "MyStepFunctionRole487C681B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "functionlambda70BD8ECD": {
      "DependsOn": [
        "functionlambdaServiceRole7D963007",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "be30ef1de42d0cf33ebc1ca2e8bef80c79b8bc831da69a04dcd6258263173c0b.zip",
        },
        "Handler": "index.function",
        "Role": {
          "Fn::GetAtt": [
            "functionlambdaServiceRole7D963007",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "functionlambdaServiceRole7D963007": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
